# GB_EMU

./: .gitignore  CMakeLists.txt  README.md  main.c  main.out  main.s  run.sh
src/: bit.c  bitwise.c  cpu.c  instructions.c  joypad.c  logger.c  memory.c  memory.h  opcodes.c  ppu.c  prefixedInstructions.c  register.c  rom.c  rom.h
src/headers/: bit.h  bitwise.h  cpu.h  instructions.h  joypad.h  logger.h  memory.h  opcodes.h  ppu.h  prefixedInstructions.h  register.h  rom.h
